feat: add three fieldset

--- a/style.css
+++ b/style.css
@@ -21,3 +21,12 @@ form {
     width: 60vw;
     padding-bottom: 2em;
 }
+
+fieldset {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border: none;
+    border-bottom: 3px solid #3b3b4f;
+}
