--- a/style.css
+++ b/style.css
@@ -30,3 +30,45 @@ fieldset {
     border: none;
     border-bottom: 3px solid #3b3b4f;
 }
+
+fieldset:last-of-type {
+    border-bottom: none;
+}
+label {
+    display: block;
+    margin: 0.5rem 0;
+}
+input, textarea, select {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 2em;
+}
+input, textarea {
+    background-color: #0a0a23;
+    border: 1px solid #0a0a23;
+    color: #ffffff;
+}
+.inline {
+    width: unset;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+}
+input[type="submit"]{ /* Используется только к кнопки сабмит*/
+    display: block;
+    width: 60%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 300px;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: #3b3b4f;
+    border-color: white;
+}
+input[type="file"] {
+    padding: 1px 2px;
+}
+a {
+    color: #dfdfe2;
+}
